Add machine learning

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
     buildFeatures {
         viewBinding true
         compose true
+        mlModelBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.2.0'
@@ -58,6 +59,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-common-ktx:20.3.2'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.4'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -65,13 +69,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.2'
     implementation "de.hdodenhof:circleimageview:3.1.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     //ViewPager2
     implementation 'androidx.viewpager2:viewpager2:1.0.0-rc01'
 
     //Lottie Animation
     implementation 'com.airbnb.android:lottie:3.0.7'
-    implementation "com.airbnb.android:lottie-compose:3.0.7"
+//    implementation "com.airbnb.android:lottie-compose:3.0.7"
 
     //Chip Navigation
     implementation 'com.github.ismaeldivita:chip-navigation-bar:1.4.0'
