--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,20 @@
 
     <uses-feature android:name="android.hardware.camera" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+
+            <category android:name="android.intent.category.BROWSABLE" />
+
+            <data android:scheme="https" />
+        </intent>
+    </queries>
 
     <application
         android:allowBackup="true"
@@ -19,9 +32,16 @@
         android:theme="@style/Theme.IPlant"
         tools:targetApi="31">
         <activity
+            android:name=".ui.article.DetailArticleActivity"
+            android:exported="false"
+            android:parentActivityName=".ui.article.ArticleActivity" />
+        <activity
+            android:name=".ui.MediaActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.article.ArticleActivity"
             android:exported="false"
-            android:parentActivityName=".ui.DashboardActivity"/>
+            android:parentActivityName=".ui.DashboardActivity" />
         <activity
             android:name=".ui.profile.ProfileActivity"
             android:exported="false" />
@@ -54,6 +74,16 @@
         <activity
             android:name=".ui.LoginActivity"
             android:exported="false" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.acer.iplant"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
