--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,10 +76,9 @@ dependencies {
 
     //Lottie Animation
     implementation 'com.airbnb.android:lottie:3.0.7'
-//    implementation "com.airbnb.android:lottie-compose:3.0.7"
 
-    //Chip Navigation
-    implementation 'com.github.ismaeldivita:chip-navigation-bar:1.4.0'
+    //ShimmerView Loading
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     //Image Slider Auto
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
