--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,15 +61,13 @@
         </activity>
         <activity
             android:name=".ui.ResultActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".ui.MediaActivity"/>
         <activity
             android:name=".ui.CameraActivity"
             android:exported="false" />
         <activity
             android:name=".ui.DashboardActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".ui.LoginActivity"
